--- a/public/tpl/fieldtypes/file.tpl.html
+++ b/public/tpl/fieldtypes/file.tpl.html
@@ -1,1 +1,4 @@
-<input type="text"  ng-model="$parent.model" />
+<div ng-controller="FileCtrl">
+<input type="text"   ng-model="$parent.model" />
+ <md-button class="md-primary md-raised" ng-click="showAdvanced($event)"></md-button>
+     </div>
